Load barchart data dynamically

--- a/room-backup.html
+++ b/room-backup.html
@@ -165,7 +165,7 @@
 												<div class="state-9" style="width: 7%"></div>
 												<div class="state-10" style="width: 4%"></div>
 												<div class="state-11" style="width: 9%"></div>
-											</div>
+											</div><!-- barchart-bars -->
 											
 											<img class="left-edge" src="imgs/assets/left-edge.png" style="left: 65%">
 											<img class="right-edge" src="imgs/assets/right-edge.png" style="left: 74%">
