--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<ul class="action-list">
 				<li><img src="imgs/assets/icons/statistic.png">Statistiken</li>
 				<li scroll="0" class="active"><img src="imgs/assets/icons/barchart.png">Verlaufsdiagramm</li>
-				<li scroll="1" class="emergency"><img class="svg" src="imgs/assets/icons/schedule.svg">Operationen</li>
+				<li scroll="1" class="schedule"><img class="svg" src="imgs/assets/icons/schedule.svg">Operationen</li>
 				<li><img src="imgs/assets/icons/person.png">Dienstplan</li>
 				<li><img src="imgs/assets/icons/message.png">Nachrichten</li>
 			</ul><!-- action-list -->
