Only 9 rooms (but those filled with beautiful data)

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 		<nav>
 			<ul class="action-list">
 				<li><img src="imgs/assets/icons/statistic.png">Statistiken</li>
-				<li scroll="0" class="active"><img src="imgs/assets/icons/barchart.png">Verlaufsdiagramm</li>
-				<li scroll="1" class="schedule"><img class="svg" src="imgs/assets/icons/schedule.svg">Operationen</li>
+				<li scroll="0" class=""><img src="imgs/assets/icons/barchart.png">Verlaufsdiagramm</li>
+				<li scroll="1" class="schedule active"><img class="svg" src="imgs/assets/icons/schedule.svg">Operationen</li>
 				<li><img src="imgs/assets/icons/person.png">Dienstplan</li>
 				<li><img src="imgs/assets/icons/message.png">Nachrichten</li>
 			</ul><!-- action-list -->
