Change time by drag and drop (Experimental)

--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
 		<script type="text/javascript" src="scripts/setup.js"></script>
 		<script type="text/javascript" src="scripts/action.js"></script>
 		
+		<!-- BARCHART -->
  		<script type="text/javascript" src="scripts/viewBarchartSetup.js"></script>
 		
+		<!-- SCHEDULE -->
 		<script type="text/javascript" src="scripts/viewScheduleSetup.js"></script>
 		<script type="text/javascript" src="scripts/viewScheduleAction.js"></script>
  		<script type="text/javascript" src="scripts/viewScheduleActionAddSurgery.js"></script>
-
+ 		<script type="text/javascript" src="scripts/viewScheduleActionDragAndDrop.js"></script>
 
 	</head>
 	
