Barchart legend shows state details on hover

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		
 		<!-- BARCHART -->
  		<script type="text/javascript" src="scripts/viewBarchartSetup.js"></script>
+ 		<script type="text/javascript" src="scripts/viewBarchartAction.js"></script>
 		
 		<!-- SCHEDULE -->
 		<script type="text/javascript" src="scripts/viewScheduleSetup.js"></script>
