--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<head>
 	
 		<!-------------------------<!--! META ------------------------------>
-		<title>Surgery Management System</title>
+		<title>OPMS – Surgery Management System</title>
 		
 		<meta charset="utf-8"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
