--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,8 @@
 
 	<body>
 
+    <div class="titlebar">OPMS – Surgery-Management-System</div>
+
     <div class="container">
 		<!-------------------------<!--! NAV ------------------------------>
 		<nav>
